--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="../components/platform/platform.js"></script>
+        <script src="components/platform/platform.js"></script>
         <link rel="import" href="demo-tabs.html">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
